# agentguard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agents/: coordinator.py  llm_client.py  worker_agents.py
config/: settings.py
core/: database.py  orchestrator.py  schemas.py
data/: schema.sql
frontend/: README.md  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: HealthIndicator.jsx  MetricsCard.jsx  RunPipeline.jsx  RunTable.jsx  Sidebar.jsx
frontend/src/pages/: InspectRun.jsx  NewRun.jsx  Overview.jsx  ResumeRun.jsx
runtime/: checkpointer.py  cost_governor.py  failover.py
scratch/: render_mermaid.py
tests/: test_api.py  test_checkpointing.py  test_cost_governor.py  test_failover.py
