[build-system]
requires = [
    "setuptools>=68.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "agentguard"
version = "0.1.0"
description = "Agent runtime / control plane for running autonomous LLM agents safely in production."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # LLM providers
    "anthropic>=0.34.0",
    "openai>=1.40.0",

    # Settings / schemas
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",

    # Database
    "asyncpg>=0.29.0",

    # Orchestration / checkpointing
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",          # for FastAPI TestClient (async)
    "ruff>=0.4.0",
]

[project.scripts]
agentguard = "main:cli_entry"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
include = ["agents*", "config*", "core*", "runtime*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
